# cadex

./: CMakeLists.txt  curve.cpp  curve.h  main.cpp  readme.md
include/: curve.h  curve.ipp
